# fastpg

./: Makefile  README.md  pyproject.toml
src/fastpg/: __init__.py  core.py  exceptions.py  utils.py
